looped items, updated classes in sass and fixed alignment, finished moment function

--- a/app/styles/_searchresults.scss
+++ b/app/styles/_searchresults.scss
@@ -49,17 +49,15 @@
 		}
 
 		.sort-results {
+    
 
 
 			margin-bottom: 20px;
 
 			.sortresults-list {
+        display: inline-block;
 
-				li {
-					margin: 5px 10px;
-				}
-
-				p {
+				.text {
 					font-size: 0.8em;
 					width: 100px;
 				}
